# AUBO_Polish_SLAM

./: .gitignore  DATA_CHAIN.md  OPERATION_GUIDE.md  README.md  camgui  debug_p6_shadow.sh  diagnose_moveit_fail.sh  run_camera_calibration.sh  run_goto_enhanced.sh  run_p6_shadow.sh  run_square_demo.sh  run_teach_playback.sh  run_trajectory.sh  start_p6.sh  startup_log_real.sh  system_tools.sh
docs/: ARCHITECTURE.md  AUBO_E5_Coordinate_Quick_Reference.txt  CAMERA_CALIBRATION_GUIDE.md  LINKED_EXECUTION_DESIGN.md  MOTION_PLANNING.md  MULTI_TARGET_TRAJECTORY_GUIDE.md  README.md  SAFETY_SYSTEM.md  TEACH_PLAYBACK_GUIDE.md  TESTING_AND_VERIFICATION.md  TROUBLESHOOTING.md  UNITY_MIGRATION_NEXT_STEPS.md  UNITY_MOTION_ISSUE_SOLUTION.md  system_architecture.dot
docs/unity_fixes/: UNITY_PUBLISHER_FIX.cs
src/: README.md
src/aubo_linked_execution/: CMakeLists.txt  package.xml
src/aubo_linked_execution/config/: circle_motion.yaml  linked_execution_controllers.yaml  motion_waypoints.yaml  patrol_motion.yaml  square_motion.yaml
src/aubo_linked_execution/launch/: aubo_e5_linked_execution.launch  test_obstacle_avoidance.launch
src/aubo_linked_execution/scripts/: alert_dialog.py  alert_dialog_demo.py  aubo_robot_startup.py  continuous_motion_demo.py  gazebo_rtf_monitor.py  joint_state_mirror_adapter.py  linked_execution_action_server.py  linked_execution_monitor.py  obstacle_spawner.py  playback_waypoints.py  safety_monitor.py  simple_playback.py  simple_teach.py  square_demo_control.py  teach_waypoints.py  test_obstacle_avoidance.py  unity_sync_monitor.py  unity_test_controller.py
src/aubo_robot/: README.md
src/aubo_robot/PointCLoud_SLAM/: CMakeLists.txt  Readme.txt  package.xml
src/aubo_robot/PointCLoud_SLAM/config/: poisson_reconstruction.yaml  tabletop_segmentation.yaml
src/aubo_robot/PointCLoud_SLAM/include/PointCLoud_SLAM/: poisson_reconstruction.hpp  tabletop_segmentation.hpp
src/aubo_robot/PointCLoud_SLAM/launch/: camera.launch  mapping.launch  system.launch  tabletop.launch
src/aubo_robot/PointCLoud_SLAM/src/: cloud_saver_node.cpp  poisson_reconstruction_node.cpp  tabletop_segmentation_node.cpp
src/aubo_robot/aubo_controller/: CMakeLists.txt
src/aubo_robot/aubo_controller/include/: joint_trajectory_action.h
src/aubo_robot/aubo_controller/script/aubo_controller/: aubo_robot_simulator
src/aubo_robot/aubo_controller/src/: aubo_robot_simulator.cpp  joint_trajectory_action.cpp
src/aubo_robot/aubo_description/: README.md
src/aubo_robot/aubo_description/urdf/: aubo_e5.urdf.xacro
src/aubo_robot/aubo_driver/: CMakeLists.txt  README.md  package.xml
src/aubo_robot/aubo_driver/include/aubo_driver/: aubo_driver.h
src/aubo_robot/aubo_driver/launch/: aubo_driver_real.launch
src/aubo_robot/aubo_driver/scripts/: fake_real_robot.py
src/aubo_robot/aubo_driver/src/: aubo_driver.cpp  aubo_driver.cpp.backup  aubo_gazebo_driver.cpp
src/aubo_robot/aubo_e5_moveit_config/config/: joint_limits.yaml  ros_controllers.yaml
src/aubo_robot/aubo_e5_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  linked_execution_moveit_controller_manager.launch  linked_execution_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ros_controllers.launch  trajectory_execution.launch.xml
src/aubo_robot/aubo_gazebo/: README.md
src/aubo_robot/aubo_gazebo/config/: aubo_e5_gazebo_control.yaml
src/aubo_robot/aubo_gazebo/launch/: aubo_e5_gazebo_control.launch
src/aubo_robot/aubo_gazebo/scripts/: init_controllers.py
src/aubo_robot/aubo_gazebo/urdf/: aubo_e5.xacro
src/aubo_robot/aubo_gazebo/worlds/: aubo_e5.world
src/aubo_robot/aubo_planner/: CMakeLists.txt  package.xml
src/aubo_robot/aubo_planner/config/: planner_configs.yaml
src/aubo_robot/aubo_planner/examples/: SAFETY_GUIDE.md  advanced_motion_example.py  camera_calibration_capture.py  goto_pose.py  goto_pose_enhanced.py.backup  goto_pose_enhanced_v2.py  simple_motion_example.py
src/aubo_robot/aubo_planner/scripts/: motion_planning_interface.py  planner_manager.py
src/aubo_robot/aubo_planner/scripts/execution/: __init__.py  async_executor.py
src/aubo_robot/aubo_planner/scripts/goals/: __init__.py  joint_goal.py  motion_goal.py  pose_goal.py
src/aubo_robot/aubo_planner/scripts/planners/: __init__.py  base_planner.py  ompl_planner.py
src/aubo_robot/aubo_planner/scripts/validators/: __init__.py  trajectory_validator.py
src/aubo_unity_bridge/: CMakeLists.txt  README.md  UNITY_SHADOW_FIX.md  package.xml  test_shadow_fix.sh
src/aubo_unity_bridge/config/: unity_shadow_tuning.yaml  unity_topics.yaml
src/aubo_unity_bridge/docs/: Migration_Plan.md  P6_Shadow_Mode_Fix.md
src/aubo_unity_bridge/launch/: unity_bridge.launch  unity_bridge_relaxed.launch
src/aubo_unity_bridge/scripts/: fake_aubo_joint_states.py  unity_command_forwarder.py  unity_diagnostic_logger.py  unity_execution_monitor.py  unity_joint_states_publisher.py
src/aubo_unity_bridge/unity_scripts/: AuboJointStatePublisher_Optimized.cs
src/mecheye_ros_interface/: Attention.txt
